@@ -32,28 +32,31 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-import org.eclipse.cdt.core.dom.ast.IASTBinaryExpression;
 import org.eclipse.cdt.core.dom.ast.IASTNode;
 
 import de.uni_freiburg.informatik.ultimate.boogie.ExpressionFactory;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.ArrayAccessExpression;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.ArrayLHS;
+import de.uni_freiburg.informatik.ultimate.boogie.ast.BinaryExpression;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.Declaration;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.Expression;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.HavocStatement;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.IdentifierExpression;
+import de.uni_freiburg.informatik.ultimate.boogie.ast.IntegerLiteral;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.LeftHandSide;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.StructAccessExpression;
-import de.uni_freiburg.informatik.ultimate.boogie.ast.StructConstructor;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.StructLHS;
+import de.uni_freiburg.informatik.ultimate.boogie.ast.UnaryExpression;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.VarList;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.VariableDeclaration;
 import de.uni_freiburg.informatik.ultimate.boogie.ast.VariableLHS;
 import de.uni_freiburg.informatik.ultimate.boogie.type.BoogieType;
-import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.base.chandler.MemoryHandler;
-import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.base.expressiontranslation.ExpressionTranslation;
+import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.base.chandler.TypeSizes;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.AuxVarInfo;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CArray;
+import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CEnum;
+import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CFunction;
+import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CPointer;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CPrimitive;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CStruct;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.container.c.CType;
@@ -61,8 +64,7 @@ import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.contai
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.ExpressionListResult;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.ExpressionResult;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.ExpressionResultBuilder;
-import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.HeapLValue;
-import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.LRValueFactory;
+import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.ExpressionResultTransformer;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.LocalLValue;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.RValue;
 import de.uni_freiburg.informatik.ultimate.cdt.translation.implementation.result.Result;
@@ -82,7 +84,7 @@ public class CTranslationUtil {
 	}
 
 	public static LocalLValue constructArrayAccessLhs(final ILocation loc, final LocalLValue arrayLhsToInitialize,
-			final List<Integer> arrayIndex, final ExpressionTranslation expressionTranslation) {
+			final List<Integer> arrayIndex, final TypeSizes typeSizes) {
 		final CArray cArrayType = (CArray) arrayLhsToInitialize.getCType().getUnderlyingType();
 
 		final Expression[] index = new Expression[arrayIndex.size()];
@@ -91,7 +93,7 @@ public class CTranslationUtil {
 
 		for (int i = 0; i < arrayIndex.size(); i++) {
 			final CPrimitive currentIndexType = (CPrimitive) cArrayType.getBound().getCType().getUnderlyingType();
-			index[i] = expressionTranslation.constructLiteralForIntegerType(loc, currentIndexType,
+			index[i] = typeSizes.constructLiteralForIntegerType(loc, currentIndexType,
 					new BigInteger(arrayIndex.get(i).toString()));
 
 			final CType valueType = currentArrayType.getValueType().getUnderlyingType();
@@ -108,12 +110,12 @@ public class CTranslationUtil {
 	}
 
 	public static LocalLValue constructArrayAccessLhs(final ILocation loc, final LocalLValue arrayLhsToInitialize,
-			final Integer arrayIndex, final ExpressionTranslation expressionTranslation) {
+			final Integer arrayIndex, final TypeSizes typeSizes) {
 		final CArray cArrayType = (CArray) arrayLhsToInitialize.getCType().getUnderlyingType();
 
 		final CPrimitive currentIndexType = (CPrimitive) cArrayType.getBound().getCType();
-		final Expression index = expressionTranslation.constructLiteralForIntegerType(loc, currentIndexType,
-				new BigInteger(arrayIndex.toString()));
+		final Expression index =
+				typeSizes.constructLiteralForIntegerType(loc, currentIndexType, new BigInteger(arrayIndex.toString()));
 
 		final ArrayLHS alhs = ExpressionFactory.constructNestedArrayLHS(loc, arrayLhsToInitialize.getLhs(),
 				new Expression[] { index });
@@ -123,99 +125,10 @@ public class CTranslationUtil {
 		return new LocalLValue(alhs, cellType, null);
 	}
 
-	// public static LRValue constructOffHeapStructAccessLhs(final ILocation loc, final LocalLValue structBaseLhs,
-	// final int i) {
-	// final CStruct cStructType = (CStruct) structBaseLhs.getCType().getUnderlyingType();
-	// final String fieldName = cStructType.getFieldIds()[i];
-	// final StructLHS lhs = ExpressionFactory.constructStructAccessLhs(loc, structBaseLhs.getLHS(), fieldName);
-	// return new LocalLValue(lhs, cStructType.getFieldTypes()[i]);
-	// }
-
-	// public static HeapLValue constructOnHeapStructAccessLhs(final HeapLValue structBaseLhs, final int i) {
-	// final CStruct cStructType = (CStruct) structBaseLhs.getCType();
-	// // TODO
-	// return null;
-	// }
-
-	public static HeapLValue constructAddressForArrayAtIndex(final ILocation loc, final Dispatcher main,
-			final HeapLValue arrayBaseAddress, final List<Integer> arrayIndex, final IASTNode hook) {
-		final CArray cArrayType = (CArray) arrayBaseAddress.getCType().getUnderlyingType();
-
-		final List<Integer> arrayBounds =
-				getConstantDimensionsOfArray(cArrayType, main.mCHandler.getExpressionTranslation(), hook);
-
-		Integer product = 0;
-		for (int i = 0; i < arrayIndex.size(); i++) {
-			final int factor = i == arrayIndex.size() - 1 ? 1 : arrayBounds.get(i + 1);
-			product = product + factor * arrayIndex.get(i);
-		}
-		final CPrimitive sizeT = main.mCHandler.getTypeSizeAndOffsetComputer().getSizeT();
-
-		final Expression flatCellNumber = main.mCHandler.getExpressionTranslation().constructLiteralForIntegerType(loc,
-				sizeT, new BigInteger(product.toString()));
-
-		final Expression pointerBase = MemoryHandler.getPointerBaseAddress(arrayBaseAddress.getAddress(), loc);
-		final Expression pointerOffset = MemoryHandler.getPointerOffset(arrayBaseAddress.getAddress(), loc);
-		final Expression cellOffset = main.mCHandler.getMemoryHandler().multiplyWithSizeOfAnotherType(loc,
-				cArrayType.getValueType(), flatCellNumber, sizeT, hook);
-		final Expression sum = main.mCHandler.getExpressionTranslation().constructArithmeticExpression(loc,
-				IASTBinaryExpression.op_plus, pointerOffset, sizeT, cellOffset, sizeT);
-		final StructConstructor newPointer = MemoryHandler.constructPointerFromBaseAndOffset(pointerBase, sum, loc);
-
-		return LRValueFactory.constructHeapLValue(main, newPointer, cArrayType.getValueType(), null);
-	}
-
-	public static HeapLValue constructAddressForArrayAtIndex(final ILocation loc, final Dispatcher main,
-			final HeapLValue arrayBaseAddress, final Integer arrayIndex, final IASTNode hook) {
-		final CArray cArrayType = (CArray) arrayBaseAddress.getCType().getUnderlyingType();
-
-		final CPrimitive pointerComponentType = main.mCHandler.getExpressionTranslation().getCTypeOfPointerComponents();
-
-		final Expression flatCellNumber = main.mCHandler.getExpressionTranslation().constructLiteralForIntegerType(loc,
-				pointerComponentType, new BigInteger(arrayIndex.toString()));
-
-		/* do a conversion so the expression has boogie pointer type */
-		final RValue addressRVal = arrayBaseAddress.getAddressAsPointerRValue(main.mTypeHandler.getBoogiePointerType());
-		// final Expression pointerBase = MemoryHandler.getPointerBaseAddress(arrayBaseAddress.getAddress(), loc);
-		final Expression pointerBase = MemoryHandler.getPointerBaseAddress(addressRVal.getValue(), loc);
-		final Expression pointerOffset = MemoryHandler.getPointerOffset(addressRVal.getValue(), loc);
-
-		final CType cellType = cArrayType.getValueType();
-
-		final Expression cellOffset = main.mCHandler.getMemoryHandler().multiplyWithSizeOfAnotherType(loc, cellType,
-				flatCellNumber, pointerComponentType, hook);
-
-		final Expression sum = main.mCHandler.getExpressionTranslation().constructArithmeticExpression(loc,
-				IASTBinaryExpression.op_plus, pointerOffset, pointerComponentType, cellOffset, pointerComponentType);
-
-		final StructConstructor newPointer = MemoryHandler.constructPointerFromBaseAndOffset(pointerBase, sum, loc);
-
-		return LRValueFactory.constructHeapLValue(main, newPointer, cellType, null);
-	}
-
-	public static HeapLValue constructAddressForStructField(final ILocation loc, final Dispatcher main,
-			final HeapLValue baseAddress, final int fieldIndex, final IASTNode hook) {
-		final CStruct cStructType = (CStruct) baseAddress.getCType().getUnderlyingType();
-
-		final CPrimitive sizeT = main.mCHandler.getTypeSizeAndOffsetComputer().getSizeT();
-
-		final Expression fieldOffset = main.mCHandler.getTypeSizeAndOffsetComputer().constructOffsetForField(loc,
-				cStructType, fieldIndex, hook);
-
-		final Expression pointerBase = MemoryHandler.getPointerBaseAddress(baseAddress.getAddress(), loc);
-		final Expression pointerOffset = MemoryHandler.getPointerOffset(baseAddress.getAddress(), loc);
-		final Expression sum = main.mCHandler.getExpressionTranslation().constructArithmeticExpression(loc,
-				IASTBinaryExpression.op_plus, pointerOffset, sizeT, fieldOffset, sizeT);
-		final StructConstructor newPointer = MemoryHandler.constructPointerFromBaseAndOffset(pointerBase, sum, loc);
-
-		return LRValueFactory.constructHeapLValue(main, newPointer, cStructType.getFieldTypes()[fieldIndex], null);
-	}
-
-	public static boolean isVarlengthArray(final CArray cArrayType, final ExpressionTranslation expressionTranslation,
-			final IASTNode hook) {
+	public static boolean isVarlengthArray(final CArray cArrayType, final TypeSizes typeSizes, final IASTNode hook) {
 		CArray currentArrayType = cArrayType;
 		while (true) {
-			if (expressionTranslation.extractIntegerValue(currentArrayType.getBound(), hook) == null) {
+			if (typeSizes.extractIntegerValue(currentArrayType.getBound(), hook) == null) {
 				// found a variable length bound
 				return true;
 			}
@@ -229,22 +142,22 @@ public class CTranslationUtil {
 		}
 	}
 
-	public static boolean isToplevelVarlengthArray(final CArray cArrayType,
-			final ExpressionTranslation expressionTranslation, final IASTNode hook) {
-		return expressionTranslation.extractIntegerValue(cArrayType.getBound(), hook) == null;
+	public static boolean isToplevelVarlengthArray(final CArray cArrayType, final TypeSizes typeSizes,
+			final IASTNode hook) {
+		return typeSizes.extractIntegerValue(cArrayType.getBound(), hook) == null;
 	}
 
-	public static List<Integer> getConstantDimensionsOfArray(final CArray cArrayType,
-			final ExpressionTranslation expressionTranslation, final IASTNode hook) {
-		if (CTranslationUtil.isVarlengthArray(cArrayType, expressionTranslation, hook)) {
+	public static List<Integer> getConstantDimensionsOfArray(final CArray cArrayType, final TypeSizes typeSizes,
+			final IASTNode hook) {
+		if (CTranslationUtil.isVarlengthArray(cArrayType, typeSizes, hook)) {
 			throw new IllegalArgumentException("only call this for non-varlength array types");
 		}
 		CArray currentArrayType = cArrayType;
 
 		final List<Integer> result = new ArrayList<>();
 		while (true) {
-			result.add(Integer.parseUnsignedInt(
-					expressionTranslation.extractIntegerValue(currentArrayType.getBound(), hook).toString()));
+			result.add(Integer
+					.parseUnsignedInt(typeSizes.extractIntegerValue(currentArrayType.getBound(), hook).toString()));
 
 			final CType valueType = currentArrayType.getValueType().getUnderlyingType();
 			if (valueType instanceof CArray) {
@@ -259,11 +172,11 @@ public class CTranslationUtil {
 		return (valueType instanceof CStruct && !(valueType instanceof CUnion)) || valueType instanceof CArray;
 	}
 
-	public static int getConstantFirstDimensionOfArray(final CArray cArrayType,
-			final ExpressionTranslation expressionTranslation, final IASTNode hook) {
+	public static int getConstantFirstDimensionOfArray(final CArray cArrayType, final TypeSizes typeSizes,
+			final IASTNode hook) {
 		final RValue dimRVal = cArrayType.getBound();
 
-		final BigInteger extracted = expressionTranslation.extractIntegerValue(dimRVal, hook);
+		final BigInteger extracted = typeSizes.extractIntegerValue(dimRVal, hook);
 		if (extracted == null) {
 			throw new IllegalArgumentException("only call this for non-varlength first dimension types");
 		}
@@ -277,31 +190,33 @@ public class CTranslationUtil {
 	 * ExpressionResult is returned unchanged case ExpressionListResult: we evaluate all expressions, also switching to
 	 * rvalue in every case, and we accumulate the corresponding statements in an ExpressionResult
 	 *
+	 * @param transformer
+	 *            TODO
 	 * @param loc
-	 * @param main
-	 * @param dispatch
+	 * @param result
+	 *
 	 * @return
 	 */
-	public static ExpressionResult convertExpressionListToExpressionResultIfNecessary(final ILocation loc,
-			final Dispatcher main, final Result dispatch, final IASTNode hook) {
-		assert dispatch instanceof ExpressionListResult || dispatch instanceof ExpressionResult;
-		if (dispatch instanceof ExpressionResult) {
-			return (ExpressionResult) dispatch;
+	public static ExpressionResult convertExpressionListToExpressionResultIfNecessary(
+			final ExpressionResultTransformer transformer, final ILocation loc, final Result result,
+			final IASTNode hook) {
+		assert result instanceof ExpressionListResult || result instanceof ExpressionResult;
+		if (result instanceof ExpressionResult) {
+			return (ExpressionResult) result;
 		}
-		final ExpressionListResult listResult = (ExpressionListResult) dispatch;
+		final ExpressionListResult listResult = (ExpressionListResult) result;
 
-		final ExpressionResultBuilder result = new ExpressionResultBuilder();
+		final ExpressionResultBuilder newResult = new ExpressionResultBuilder();
 
-		for (int i = 0; i < listResult.list.size(); i++) {
+		for (final ExpressionResult elem : listResult.getList()) {
 			/*
 			 * Note: C11 6.5.17.2, footnote: A comma operator does not yield an lvalue. --> thus we can immediately
 			 * switch to rvalue here
 			 */
-			result.addAllExceptLrValue(listResult.list.get(i).switchToRValueIfNecessary(main, loc, hook));
+			newResult.addAllExceptLrValue(transformer.switchToRValueIfNecessary(elem, loc, hook));
 		}
-		result.setLrValue(listResult.list.get(listResult.list.size() - 1).getLrValue());
-
-		return result.build();
+		newResult.setLrValue(listResult.getLast().getLrValue());
+		return newResult.build();
 	}
 
 	public static int findIndexOfStructField(final CStruct targetCType, final String rootDesignator) {
@@ -394,9 +309,6 @@ public class CTranslationUtil {
 
 			if (nameHandler.isTempVar(id)) {
 				// malloc auxvars do not need to be havocced in some cases (alloca)
-				// result &= auxVars.containsKey(varDecl) || id.contains(SFO.MALLOC);
-				// result &= auxVars.containsKey(varDecl);
-
 				boolean auxVarExists = false;
 				for (final AuxVarInfo auxVar : auxVars) {
 					if (auxVar.getVarDec().equals(varDecl)) {
@@ -428,6 +340,63 @@ public class CTranslationUtil {
 			throw new UnsupportedOperationException("todo: implement");
 		} else {
 			throw new IllegalArgumentException("expression cannot be converted to a LeftHandSide: " + expr);
+		}
+	}
+
+	/**
+	 * Takes an arithmetic expression that has integer value and can be computed at compile-time, i.e., that contains no
+	 * variables, and returns an IntegerLiteral containing the result.
+	 *
+	 * Matthias 2015-09-21: "premature optimization is the root of all evil" I think, by now we should not use this
+	 * method and better live with long expressions. However, I don't want to delete this method, we might want to use
+	 * it in the future.
+	 */
+	@Deprecated
+	public static BigInteger computeConstantValue(final Expression value) {
+		if (value instanceof IntegerLiteral) {
+			return new BigInteger(((IntegerLiteral) value).getValue());
+		} else if (value instanceof UnaryExpression) {
+			switch (((UnaryExpression) value).getOperator()) {
+			case ARITHNEGATIVE:
+				return computeConstantValue(((UnaryExpression) value).getExpr()).negate();
+			default:
+				throw new UnsupportedOperationException("could not compute constant value");
+			}
+		} else if (value instanceof BinaryExpression) {
+			switch (((BinaryExpression) value).getOperator()) {
+			case ARITHDIV:
+				return computeConstantValue(((BinaryExpression) value).getLeft())
+						.divide(computeConstantValue(((BinaryExpression) value).getRight()));
+			case ARITHMINUS:
+				return computeConstantValue(((BinaryExpression) value).getLeft())
+						.subtract(computeConstantValue(((BinaryExpression) value).getRight()));
+			case ARITHMOD:
+				return computeConstantValue(((BinaryExpression) value).getLeft())
+						.mod(computeConstantValue(((BinaryExpression) value).getRight()));
+			case ARITHMUL:
+				return computeConstantValue(((BinaryExpression) value).getLeft())
+						.multiply(computeConstantValue(((BinaryExpression) value).getRight()));
+			case ARITHPLUS:
+				return computeConstantValue(((BinaryExpression) value).getLeft())
+						.add(computeConstantValue(((BinaryExpression) value).getRight()));
+			default:
+				throw new UnsupportedOperationException("could not compute constant value");
+			}
+		} else {
+			throw new UnsupportedOperationException("could not compute constant value");
+		}
+	}
+
+	public static boolean isAggregateCType(final CType cTypeRaw) {
+		final CType cType = cTypeRaw.getUnderlyingType();
+
+		if (cType instanceof CPrimitive || cType instanceof CEnum || cType instanceof CPointer
+				|| cType instanceof CUnion || cType instanceof CFunction) {
+			return false;
+		} else if (cType instanceof CArray || cType instanceof CStruct) {
+			return true;
+		} else {
+			throw new UnsupportedOperationException("missed a type??");
 		}
 	}
 }
